--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rafting Site Plan</title>
+    <title>Rafting Site Plan | Xavier Rodriguez</title>
     <meta name="description" content="A rafting site plan is a detailed outline that organizes and describes the logistics, safety measures, routes, and amenities for a rafting trip or excursion.">
-    <meta name="Author" content="Moise Fabrice">
+    <meta name="Author" content="Xavier Rodriguez">
     <link rel="stylesheet" href="styles/site-plan-rafting.css"/>
 </head>
 <body>
@@ -25,7 +25,7 @@
         <h2>Overview</h2>
         <h3>Purpose</h3>
         <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
-        <h4>Audience</h4> 
+        <h3>Audience</h3> 
         <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
