--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -21,7 +21,7 @@
             <img alt="(opens in new tab)" src="images/8.jpg" /> </a>
           <a href="2017-annual-report.ppt">
             2017 Annual Report 
-            <img alt="(PowerPoint file)" src="images/7.jpg" /> </a>
+            <img alt="(PowerPoint file)" src="images/7.jpg"> </a>
         <h2>Overview</h2>
         <h3>Purpose</h3>
         <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
@@ -29,7 +29,7 @@
         <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
-        <img src="images/Rapids_logo2.jpg"  width="200" />
+        <img src="images/Rapids_logo2.jpg"  width="200" alt="Rafting Site Logo">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
         <p>primary_color: Seal Brown #4C2301</p>
