--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Ntallah Choutvet Moise Fabrice | WDD 130</title>
-    <meta name="description" content="A landscape view of some regions in Cameroon by Moise Fabrice, in this week home page enhancement, the purpose of the page is to let you see the beauty of the lanscape around my country Cameroon.">
-    <meta name="Author" content="Moise Fabrice">
+    <meta name="description" content="A landscape view of some regions in Cameroon by Ntallah Choutvet Moise Fabrice, in this week home page enhancement, the purpose of the page is to let you see the beauty of the lanscape around my country Cameroon.">
+    <meta name="Author" content="Ntallah Choutvet Moise Fabrice">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
