--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Ntallah Choutvet Moise Fabrice | WDD 130</title>
-    <meta name="description" content="A landscape view of some regions in Cameroon by Ntallah Choutvet Moise Fabrice, in this week home page enhancement, the purpose of the page is to let you see the beauty of the lanscape around my country Cameroon.">
-    <meta name="Author" content="Ntallah Choutvet Moise Fabrice">
+    <meta name="description" content="A landscape view of some regions in Cameroon by Ntallah Choutvet Moise Fabrice, in this week home page enhancement, the purpose of the page is to let you see the beauty of the landscape around my country Cameroon.">
+    <meta name="author" content="Ntallah Choutvet Moise Fabrice">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -14,6 +17,8 @@
             <a href="https://kids.nationalgeographic.com/geography/countries/article/cameroon">Cameroon Landscape</a>
             <a href="https://www.tripadvisor.com/Attraction_Review-g293773-d8627598-Reviews-Blackitude_Museum-Yaounde_Centre_Region.html">Blackitude Museum Yaounde, Cameroon</a>
             <a href="https://stock.adobe.com/fr/search?k=cameroon+landscape">Stock Adobe/ Cameroon landscape</a>
+            <a href="https://facebook.com">Facebook</a>
+            <a href="https://linkedin.com">LinkedIn</a>
         </nav>
     </header>
     <main>
@@ -21,15 +26,21 @@
         <img src="images/18.jpg" alt="Hello, this is a picture of a landscape in Cameroon" width="200">
         <p>Hello, my name is Ntallah Choutvet Moise Fabrice and I am from Yaounde, Cameroon.</p> 
         <p>This is my first semester at BYU Idaho and the third or second course I am taking this semester.</p>
-        <p> Happy to be here.</p>
+        <p>Happy to be here.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/kinshasa-democratic-republic-of-the-congo-temple" target="_blank">Democratic Republic of Congo, Kinshasa Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Nigeria, Aba temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/nairobi-kenya-temple" target="_blank">Kenya, Nairobi Temple</a></li>
+        </ul>
     </main>
-    <aside>
-        <h2>Foumban Royal Palace</h2>
-        <img src="images/17.jpg" alt="Utah Lanscape">
-        <p>Foumban is a Town in the West Region of Cameroon.</p>
+    <aside class="box">
+        <h2>Foumban</h2>
+        <img src="images/17.jpg" alt="Utah Landscape">
+        <p>Foumban is a town in the West Region of Cameroon.</p>
     </aside>
     <footer>
         <p>©2024 Ntallah Choutvet Moise Fabrice Yaounde, Cameroon</p>
     </footer>
 </body>
+<!-- Today Friday 28 June 2024 -->
 </html>
