--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,7 @@
                 <img src="images/rafting7.jpg" alt="Rafting Moment" class="background">
                 <h1>Rapids of Alabama LTD</h1>
                 <article>
-                    <img src="images/rafting8.jpg" alt="Satisfied Clients">
+                    <img src="images/rafting10.png" alt="Satisfied Clients">
                     <p>Our purpose is to inspire adventure and discovery.<br>
                      Our mission is to provide exceptional travel experiences.<br>
                       Our creed is to prioritize sustainability and respect for cultures.<br>
