--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
 <body>
     <header>
         <nav>
-            <a href="https://kids.nationalgeographic.com/geography/countries/article/cameroon">Cameroon Landscape</a>
-            <a href="https://www.tripadvisor.com/Attraction_Review-g293773-d8627598-Reviews-Blackitude_Museum-Yaounde_Centre_Region.html">Blackitude Museum Yaounde, Cameroon</a>
-            <a href="https://stock.adobe.com/fr/search?k=cameroon+landscape">Stock Adobe/ Cameroon landscape</a>
+            <a href="https://kids.nationalgeographic.com/geography/countries/article/cameroon">Cameroon</a>
+            <a href="https://www.tripadvisor.com/Attraction_Review-g293773-d8627598-Reviews-Blackitude_Museum-Yaounde_Centre_Region.html">Blackitude Museum</a>
+            <a href="https://stock.adobe.com/fr/search?k=cameroon+landscape">landscape</a>
             <a href="https://facebook.com">Facebook</a>
             <a href="https://linkedin.com">LinkedIn</a>
         </nav>
     </header>
-    <main>
-        <h1>Ntallah Choutvet Moise Fabrice | WDD 130</h1>
-        <img src="images/18.jpg" alt="Hello, this is a picture of a landscape in Cameroon" width="200">
-        <p>Hello, my name is Ntallah Choutvet Moise Fabrice and I am from Yaounde, Cameroon.</p> 
-        <p>This is my first semester at BYU Idaho and the third or second course I am taking this semester.</p>
-        <p>Happy to be here.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/kinshasa-democratic-republic-of-the-congo-temple" target="_blank">Democratic Republic of Congo, Kinshasa Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Nigeria, Aba temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/nairobi-kenya-temple" target="_blank">Kenya, Nairobi Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Foumban</h2>
-        <img src="images/17.jpg" alt="Utah Landscape">
-        <p>Foumban is a town in the West Region of Cameroon.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Ntallah Choutvet Moise Fabrice | WDD 130</h1>
+            <img src="images/18.jpg" alt="Hello, this is a picture of a landscape in Cameroon" width="200">
+            <p>Hello, my name is Ntallah Choutvet Moise Fabrice and I am from Yaounde, Cameroon.<br> 
+            This is my first semester at BYU Idaho and the third or second course I am taking this semester.<br>
+            <p>Happy to be here.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/kinshasa-democratic-republic-of-the-congo-temple" target="_blank">Democratic Republic of Congo, Kinshasa Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple" target="_blank">Nigeria, Aba temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/nairobi-kenya-temple" target="_blank">Kenya, Nairobi Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Foumban</h2>
+            <img src="images/17.jpg" alt="Utah Landscape">
+            <p>Foumban is a town in the West Region of Cameroon.</p>
+        </aside>
+    </div>
     <footer>
         <p>©2024 Ntallah Choutvet Moise Fabrice Yaounde, Cameroon</p>
     </footer>
