--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,12 +34,32 @@
                     </p>
                 </article>
             </div>
-            <section>
+            <section class="adventures">
                 <h2>History</h2>
                 <p>  Alabama Rafting Ltd. was founded in 1995 with the goal of providing thrilling and safe rafting experiences on Alabama's most scenic rivers.<br>
                      Over the years, the company has grown to become a leader in outdoor adventure,<br>
                      known for its exceptional guides and commitment to environmental stewardship.
                 </p>
+                <figure>
+                    <img src="images/adventure1.jpg" alt="Adventure 1">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure2.jpg" alt="Adventure 2">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure3.jpg" alt="Adventure 3">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure4.jpg" alt="Adventure 4">
+                    <figcaption>Whitewater Excursion</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure5.jpg" alt="Adventure 5">
+                    <figcaption>River Journey</figcaption>
+                </figure>
             </section>
             <section>
                 <h2>
