--- a/quiz.html
+++ b/quiz.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="None for now">
+    <meta name="author" content="Ntallah Choutvet Moise Fabrice">
     <link rel="stylesheet" href="styles/quiz.css">
     <title>HTML and CSS Online Quiz</title>
 </head>
