--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,7 +29,7 @@
             <p><strong>Phone:</strong> (123) 456-7890</p>
             <p><strong>Email:</strong> info@alabamarafting.com</p>
             <h2>Our Location</h2>
-            <div class="map">
+            <div class="map-container">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509397!2d144.95373631567023!3d-37.81627974202138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf0727b8e2c1a0bdf!2s123%20River%20Rd%2C%20Adventure%20City%2C%20AL%2012345!5e0!3m2!1sen!2sus!4v1618303459338!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
