--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -14,19 +14,11 @@
         <div>Moise Fabrice</div>
     </header>
     <main>
-        <p>Learn more about our products <a href="/products">here</a>.</p>
-        <p>Learn more <a href="/products">about our products</a> </p>
-        <a target="_blank" href="https://www.wikipedia.org">Wikipedia (opens in new tab)</a>
-        <a target="_blank" href="https://www.wikipedia.org">   Wikipedia 
-            <img alt="(opens in new tab)" src="images/8.jpg" /> </a>
-          <a href="2017-annual-report.ppt">
-            2017 Annual Report 
-            <img alt="(PowerPoint file)" src="images/7.jpg"> </a>
         <h2>Overview</h2>
         <h3>Purpose</h3>
         <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
         <h3>Audience</h3> 
-        <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
+        <p> We offer family-friendly rafting trips with trained guides to ensure safety and fun for all ages. Our family packages include mild rapids suitable for young children..</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
         <img src="images/Rapids_logo2.jpg"  width="200" alt="Rafting Site Logo">
