--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan | Xavier Rodriguez</title>
     <meta name="description" content="A rafting site plan is a detailed outline that organizes and describes the logistics, safety measures, routes, and amenities for a rafting trip or excursion.">
-    <meta name="Author" content="Xavier Rodriguez">
+    <meta name="Author" content="Moise Fabrice">
     <link rel="stylesheet" href="styles/site-plan-rafting.css"/>
 </head>
 <body>
