--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Rafting Site Plan | Xavier Rodriguez</title>
     <meta name="description" content="A rafting site plan is a detailed outline that organizes and describes the logistics, safety measures, routes, and amenities for a rafting trip or excursion.">
-    <meta name="Author" content="Moise Fabrice">
+    <meta name="Author" content="Xavier Rodriguez">
     <link rel="stylesheet" href="styles/site-plan-rafting.css"/>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <h3>Purpose</h3>
         <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
         <h3>Audience</h3> 
-        <p> We offer family-friendly rafting trips with trained guides to ensure safety and fun for all ages. Our family packages include mild rapids suitable for young children..</p>
+        <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
         <img src="images/Rapids_logo2.jpg"  width="200" alt="Rafting Site Logo">
