--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Rafting Site Plan | Xavier Rodriguez</title>
-    <meta name="description" content="A rafting site plan is a detailed outline that organizes and describes the logistics, safety measures, routes, and amenities for a rafting trip or excursion.">
-    <meta name="Author" content="Xavier Rodriguez">
-    <link rel="stylesheet" href="styles/site-plan-rafting.css"/>
-</head>
-<body>
-    <header>
-        <h1>Rafting Site Plan</h1>
-        <div>Moise Fabrice</div>
-    </header>
-    <main>
-        <h2>Overview</h2>
-        <h3>Purpose</h3>
-        <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
-        <h3>Audience</h3> 
-        <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
-        <h2>Branding</h2>
-        <h3>Website Logo</h3>
-        <img src="images/Rapids_logo2.jpg"  width="200" alt="Rafting Site Logo">
-        <h2>Style Guide</h2>
-        <h3>Color Palette</h3>
-        <p>primary_color: Seal Brown #4C2301</p>
-        <p>secondary_color: Jasmine #FDDC89</p>
-        <p>accent1_color: Xanthous #FDC05B</p>
-        <p>accent2_color: Orange (web) #FAAA44</p>
-        <a href="https://coolors.co/fcb848-fecf77-fddc89-4c2301-fdc05b-d98004-5a2b02-faaa44" target="_blank">https://coolors.co/fcb848-fecf77-fddc89-4c2301-fdc05b-d98004-5a2b02-faaa44</a>
-        <p> Happy to be here.</p>
-        <h3>Typography</h3>
-        <p>montserrat-uniquifier</p> 
-        <h4>Headings Example Font</h4>
-        <h4>Normal Text/Paragraph Example Font</h4>
-        <p>Paddlers must wear life jackets at all times during the rafting trip.</p>
-        <h4>Colored Callout Example Font</h4>
-        <p>Always check weather conditions before embarking on your rafting adventure.</p>
-        <h3>Navigation</h3>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
-        </nav>
-        <h2>Wireframes</h2>
-        <h3>Home Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
-        <h3>About Us Page Wireframe</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
-    </main>
-    <footer>
-        <p>©2024 Rafting Site Document Moise Fabrice Yaounde, Cameroon WDD-130</p>
-    </footer>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Rafting Site Plan | Xavier Rodriguez</title>
+        <meta name="description" content="A rafting site plan is a detailed outline that organizes and describes the logistics, safety measures, routes, and amenities for a rafting trip or excursion.">
+        <meta name="Author" content="Xavier Rodriguez">
+        <link rel="stylesheet" href="styles/site-plan-rafting.css">
+    </head>
+    <body>
+        <header>
+            <h1>Rafting Site Plan</h1>
+            <div>Moise Fabrice</div>
+        </header>
+        <main>
+            <h2>Overview</h2>
+            <h3>Purpose</h3>
+            <p>Ensure safety, organization, and smooth operation of rafting activities.</p>
+            <h3>Audience</h3> 
+            <p>The target audience for a rafting site plan includes trip organizers, guides, safety personnel, and participants.</p>
+            <h2>Branding</h2>
+            <h3>Website Logo</h3>
+            <img src="images/Rapids_logo2.jpg"  width="200" alt="Rafting Site Logo">
+            <h2>Style Guide</h2>
+            <h3>Color Palette</h3>
+            <p>primary_color: Seal Brown #4C2301</p>
+            <p>secondary_color: Jasmine #FDDC89</p>
+            <p>accent1_color: Xanthous #FDC05B</p>
+            <p>accent2_color: Orange (web) #FAAA44</p>
+            <a href="https://coolors.co/fcb848-fecf77-fddc89-4c2301-fdc05b-d98004-5a2b02-faaa44" target="_blank">https://coolors.co/fcb848-fecf77-fddc89-4c2301-fdc05b-d98004-5a2b02-faaa44</a>
+            <p> Happy to be here.</p>
+            <h3>Typography</h3>
+            <p>montserrat-uniquifier</p> 
+            <h4>Headings Example Font</h4>
+            <h4>Normal Text/Paragraph Example Font</h4>
+            <p>Paddlers must wear life jackets at all times during the rafting trip.</p>
+            <h4>Colored Callout Example Font</h4>
+            <p>Always check weather conditions before embarking on your rafting adventure.</p>
+            <h3>Navigation</h3>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Trips</a>
+                <a href="#">Contact Us</a>
+            </nav>
+            <h2>Wireframes</h2>
+            <h3>Home Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+            <h3>About Us Page Wireframe</h3>
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+        </main>
+        <footer>
+            <p>©2024 Rafting Site Document Moise Fabrice Yaounde, Cameroon WDD-130</p>
+        </footer>
+    </body>
 </html>
