--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,10 @@
     <head>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Ntallah Choutvet Moise Fabrice | WDD 130</title>
+    <title>Rapids of Alabama LTD | About Us</title>
     <meta name="description" content="None for now">
     <meta name="author" content="Ntallah Choutvet Moise Fabrice">
     <link rel="stylesheet" href="./rafting.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
