--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <title>Rapids of Alabama LTD | About Us</title>
     <meta name="description" content="None for now">
     <meta name="author" content="Ntallah Choutvet Moise Fabrice">
-    <link rel="stylesheet" href="wwr/rafting.css">
+    <link rel="stylesheet" href="rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
