--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -44,7 +44,7 @@
                 <figcaption>John Smith - Instructor</figcaption>
             </figure>
             <figure>
-                <img src="images/customer support.jpeg" alt="Employee 3">
+                <img src="images/customer.jpeg" alt="Employee 3">
                 <figcaption>Emily Johnson - Customer Support</figcaption>
             </figure>
         </section>
@@ -80,6 +80,9 @@
         <a href="https://instagram.com"><img src="images/instagram.webp" alt="Instagram"></a>
         <a href="https://facebook.com"><img src="images/facebook.webp" alt="Facebook"></a>
         <a href="https://google.com"><img src="images/google.webp" alt="Google"></a>
+        <a href="https://contact-us-wireframe.com">
+            <img src="images/Rapids_logo2.jpg" alt="Contact Us Wireframe">
+        </a>
     </footer>
 </body>
 </html>
