--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,9 +6,7 @@
     <title>Contact Us | Alabama Rafting LTD</title>
     <meta name="description" content="Get in touch with Alabama Rafting LTD. Find our address, phone number, email, and location on the map.">
     <meta name="author" content="Ntallah Choutvet Moise Fabrice">
-    <link rel="stylesheet" href="./contact.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="./rafting.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
