--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body id="about-us-page">
         <header>
             <img src="images/Rapids_logo2.jpg" alt="Rafting Logo">
             <nav>
